--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,52 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Paula Barreto</title>
+    <link rel="stylesheet" href="main.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
       <a class="navbar-brand" href="#">Paula Barreto</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a target="_blank" href="./docs/Paula-Barreto_Resume.pdf" download>
+              <button
+                class="btn-sm btn-outline-info">
+                <i class="fas fa-download"></i>
+                Resume
+              </button>
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
+    <div class="container-fluid">
+      <!-- Content here -->
+      <div class="row main-container">
+        <div class="col col-lg-3 left-profile" style="height:100%;">
+          Profile
+        </div>
+        <div class="col-lg-9 right-projects">
+          Projects
+        </div>
+      </div>
+    </div>
   </body>
 </html>
