--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,18 @@
       <!-- Content here -->
       <div class="row main-container">
         <div class="col col-lg-3 left-profile" style="height:100%;">
-          Profile
+          <div class="d-flex justify-content-center mt-4">
+            <img class="rounded" src="./docs/Paula-Barreto_Picture.png" alt="Card image cap" style="width: 120px; height: 120px;">
+          </div>
+          <h5 class="mt-4 text-center" style="color:white;">Contact</h5>
+          <div class="contact">
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-dark"><i class="icons fas fa-phone-square"></i> +1 (647)979-0404</li>
+              <li class="list-group-item list-group-item-dark"><i class="icons fas fa-envelope-square"></i> <a href="mailto:paulavilaca@gmail.com">paulavilaca@gmail.com</a></li>
+              <li class="list-group-item list-group-item-dark"><i class="icons fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/paula-barreto-057a35b4/" target="_blank">Paula Barreto</a></li>
+              <li class="list-group-item list-group-item-dark"><i class="icons fab fa-github-square"></i> <a href="https://github.com/paulabarreto" target="_blank">paulabarreto</a></li>
+            </ul>
+          </div>
         </div>
         <div class="col-lg-9 right-projects">
           Projects
