--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Paula Barreto</title>
+    <link rel="icon" href="./docs/tech.png">
     <link rel="stylesheet" href="main.css">
     <!-- Font awesome -->
     <link rel="stylesheet"
@@ -19,7 +20,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="#">Paula Barreto</a>
+      <a class="navbar-brand" href="#"><img src="./docs/tech.png" width="35" height="35" alt="">Paula Barreto</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
