--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#experience">Experiences</a>
+            <a class="nav-link" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -46,25 +46,155 @@
         </ul>
       </div>
     </nav>
+
     <div class="container-fluid">
-      <!-- Content here -->
       <div class="row main-container">
-        <div class="col col-lg-3 left-profile" style="height:100%;">
+        <div class="col-lg-3 left-profile d-flex flex-column">
+          <div class="w-100 mt-5"></div>
           <div class="d-flex justify-content-center mt-4">
             <img class="rounded" src="./docs/Paula-Barreto_Picture.png" alt="Card image cap" style="width: 120px; height: 120px;">
           </div>
           <h5 class="mt-4 text-center" style="color:white;">Contact</h5>
           <div class="contact">
             <ul class="list-group">
-              <li class="list-group-item list-group-item-dark"><i class="icons fas fa-phone-square"></i> +1 (647)979-0404</li>
+              <li class="list-group-item list-group-item-dark"><i class="icons fas fa-phone-square"></i> +1 (647) 979-0404</li>
               <li class="list-group-item list-group-item-dark"><i class="icons fas fa-envelope-square"></i> <a href="mailto:paulavilaca@gmail.com">paulavilaca@gmail.com</a></li>
               <li class="list-group-item list-group-item-dark"><i class="icons fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/paula-barreto-057a35b4/" target="_blank">Paula Barreto</a></li>
               <li class="list-group-item list-group-item-dark"><i class="icons fab fa-github-square"></i> <a href="https://github.com/paulabarreto" target="_blank">paulabarreto</a></li>
             </ul>
           </div>
+
+          <h5 class="mt-4 text-center" style="color:white;">Languages/Libraries/Frameworks</h5>
+          <div class="container languages text-center mt-1 mb-5">
+            <div class="row">
+              <div class="col">
+                <span class="badge badge-light">JavaScript</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">React.js</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">Node.js</span>
+              </div>
+              <div class="w-100"></div>
+              <div class="col">
+                <span class="badge badge-light">HTML5</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">CSS3</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">Sass</span>
+              </div>
+              <div class="w-100"></div>
+              <div class="col">
+                <span class="badge badge-light">Ruby</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">Ruby on Rails</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">C</span>
+              </div>
+              <div class="w-100"></div>
+              <div class="col">
+                <span class="badge badge-light">PostgreSQL</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">Knex</span>
+              </div>
+              <div class="col">
+                <span class="badge badge-light">MongoDB</span>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="col-lg-9 right-projects">
-          Projects
+          <div class="scrollable">
+            <section id="about" class="sect about-me row d-flex mt-4">
+              <h2>About Me</h2>
+              <div class="w-100"></div>
+              <strong>Full Stack Web Developer | Industrial Engineer | Tourism BS </strong>
+              <div class="w-100"></div>
+              <p class="text-justify">
+                <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving goals.</em>
+                <br/><br/>
+                I have experience building full stack web applications from scratch with a tight deadline both individually and in teams. I have sound knowledge of many languages and frameworks and I am comfortable with computer science concepts like OOP and recursion and different development processes like Behavior Driven Development (BDD) and Test Driven Development (TDD).
+                <br/>
+                  I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. To demonstrate my hard work and motivation, I achieved one of the highest scores in a public exam taken by more than 45,000 applicants and got hired for a government position at the Brazilian Development Bank in 2010. Furthermore, despite coming from a family with low income, I self taught English when I was a teenager and achieved top score in an IELTS exam a few years ago which enabled me to be a Permanent Resident in Canada.<br/><br/>
+                  <em>I have the drive and the intelligence to achieve my goals, and I'm currently looking for a job opportunity as a junior software developer to demonstrate my qualifications and commitment.</em>
+               </p>
+            </section>
+            <section id="experience" class="sect about-me row d-flex mt-5">
+              <h2>Experience</h2>
+              <div class="w-100 h-0"></div>
+              <div class="card-group experience-card">
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/LHL-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Lighthouse Labs</h5>
+                    <p class="card-text"><em>Full Stack Web Development Diploma. </em><br/><br/>
+                                          This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps
+                                          from scratch using different languages and frameworks. See below some examples.</p>
+                  </div>
+                </div>
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">StickerYou</h5>
+                    <p class="card-text"><em>Industrial Engineering Intern </em><br/><br/>
+                                          Valuable experience in a startup environment applying methods and concepts learned in Engineering school. <br/>
+                                          I improved systems and increased efficiency, leveraging my problem solving and communication skills.
+
+                                        </p>
+                  </div>
+                </div>
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/bndes-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">BNDES (Rio de Janeiro, Brazil)</h5>
+                    <p class="card-text"> <em> Administrative Technician</em><br/><br/>
+                      Government job - hired by a public examination where I achieved one of the highest scores among more than 45000 contestants.</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section id="experience" class="sect about-me row d-flex mt-5">
+              <h2>Experience</h2>
+              <div class="w-100 h-0"></div>
+              <div class="card-group experience-card">
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/LHL-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Lighthouse Labs</h5>
+                    <p class="card-text"><em>Full Stack Web Development Diploma. </em><br/><br/>
+                                          This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps
+                                          from scratch using different languages and frameworks. See below some examples.</p>
+                  </div>
+                </div>
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">StickerYou</h5>
+                    <p class="card-text"><em>Industrial Engineering Intern </em><br/><br/>
+                                          Valuable experience in a startup environment applying methods and concepts learned in Engineering school. <br/>
+                                          I improved systems and increased efficiency, leveraging my problem solving and communication skills.
+
+                                        </p>
+                  </div>
+                </div>
+                <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/bndes-banner.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">BNDES (Rio de Janeiro, Brazil)</h5>
+                    <p class="card-text"> <em> Administrative Technician</em><br/><br/>
+                      Government job - hired by a public examination where I achieved one of the highest scores among more than 45000 contestants.</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
         </div>
       </div>
     </div>
