--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="col-lg-9 right-projects">
-          <div class="scrollable">
+          <div >
             <section id="about" class="sect about-me row d-flex mt-4">
               <h2>About Me</h2>
               <div class="w-100"></div>
@@ -160,43 +160,54 @@
                 </div>
               </div>
             </section>
-            <section id="experience" class="sect about-me row d-flex mt-5">
-              <h2>Experience</h2>
+            <section id="projects" class="sect row d-flex justify-content-center my-5 projects">
+              <h2 class="section-head">Projects</h2>
               <div class="w-100 h-0"></div>
-              <div class="card-group experience-card">
-                <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/LHL-banner.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Lighthouse Labs</h5>
-                    <p class="card-text"><em>Full Stack Web Development Diploma. </em><br/><br/>
-                                          This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps
-                                          from scratch using different languages and frameworks. See below some examples.</p>
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="./docs/parkwhere.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block project-caption">
+                      <h5>Parkwhere</h5>
+                      <p>A community based street parking app built with React and Node.js</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" >
+                    <img class="d-block w-100" src="./docs/chatty.jpg" style="height:520px;" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block project-caption">
+                      <h5>ChattyApp</h5>
+                      <p>A real time web chat using React and WebSockets</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./docs/tweeter.jpg" style="height:520px;" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block project-caption">
+                      <h5>Tweeter</h5>
+                      <p>A Twiter Clone</p>
+                    </div>
                   </div>
                 </div>
-                <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">StickerYou</h5>
-                    <p class="card-text"><em>Industrial Engineering Intern </em><br/><br/>
-                                          Valuable experience in a startup environment applying methods and concepts learned in Engineering school. <br/>
-                                          I improved systems and increased efficiency, leveraging my problem solving and communication skills.
-
-                                        </p>
-                  </div>
-                </div>
-                <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/bndes-banner.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">BNDES (Rio de Janeiro, Brazil)</h5>
-                    <p class="card-text"> <em> Administrative Technician</em><br/><br/>
-                      Government job - hired by a public examination where I achieved one of the highest scores among more than 45000 contestants.</p>
-                  </div>
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
               </div>
             </section>
           </div>
         </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
