Footer and bug fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -118,12 +118,13 @@
               <strong>Full Stack Web Developer | Industrial Engineer | Tourism BS </strong>
               <div class="w-100"></div>
               <p class="text-justify">
-                <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving goals.</em>
+                <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving new goals.</em>
                 <br/><br/>
                 I have experience building full stack web applications from scratch with a tight deadline both individually and in teams. I have sound knowledge of many languages and frameworks and I am comfortable with computer science concepts like OOP and recursion and different development processes like Behavior Driven Development (BDD) and Test Driven Development (TDD).
                 <br/>
-                  I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. To demonstrate my hard work and motivation, I achieved one of the highest scores in a public exam taken by more than 45,000 applicants and got hired for a government position at the Brazilian Development Bank in 2010. Furthermore, despite coming from a family with low income, I self taught English when I was a teenager and achieved top score in an IELTS exam a few years ago which enabled me to be a Permanent Resident in Canada.<br/><br/>
-                  <em>I have the drive and the intelligence to achieve my goals, and I'm currently looking for a job opportunity as a junior software developer to demonstrate my qualifications and commitment.</em>
+                  I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. I am also conversant in Italian. <br/>
+                  My successful experience both in a startup in Toronto and in a big international company in Brazil demonstrate my flexibility and capability to adapt quickly to different environments.<br/><br/>
+                  <em>I have the drive and the intelligence to make great things happen and I'm currently looking for a job opportunity as a junior software developer to demonstrate my qualifications and commitment.</em>
                </p>
             </section>
             <section id="experience" class="sect about-me row d-flex mt-5">
@@ -155,7 +156,7 @@
                   <div class="card-body">
                     <h5 class="card-title">BNDES (Rio de Janeiro, Brazil)</h5>
                     <p class="card-text"> <em> Administrative Technician</em><br/><br/>
-                      Government job - hired by a public examination where I achieved one of the highest scores among more than 45000 contestants.</p>
+                      Government job - hired by a public examination where I achieved one of the highest scores among 45000 contestants.</p>
                   </div>
                 </div>
               </div>
@@ -163,6 +164,7 @@
             <section id="projects" class="sect row d-flex justify-content-center my-5 projects">
               <h2 class="section-head">Projects</h2>
               <div class="w-100 h-0"></div>
+
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -172,24 +174,30 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img class="d-block w-100" src="./docs/parkwhere.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block project-caption">
-                      <h5>Parkwhere</h5>
-                      <p>A community based street parking app built with React and Node.js</p>
-                    </div>
+                     <a target="_blank" href="https://github.com/paulabarreto/ParkWhere">
+                      <div class="carousel-caption d-none d-md-block project-caption">
+                        <h5>ParkWhere</h5>
+                        <p>A community based street parking app built with React and Node.js</p>
+                      </div>
+                    </a>
                   </div>
                   <div class="carousel-item" >
-                    <img class="d-block w-100" src="./docs/chatty.jpg" style="height:520px;" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block project-caption">
-                      <h5>ChattyApp</h5>
-                      <p>A real time web chat using React and WebSockets</p>
-                    </div>
+                    <img class="d-block w-100 mh-100" src="https://github.com/paulabarreto/chattyApp/blob/master/Docs/Screenshot-Bobs-window.jpg?raw=true" alt="Second slide">
+                    <a target="_blank" href="https://github.com/paulabarreto/chattyApp">
+                      <div class="carousel-caption d-none d-md-block project-caption">
+                        <h5>ChattyApp</h5>
+                        <p>A real time web chat using React and WebSockets</p>
+                      </div>
+                    </a>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./docs/tweeter.jpg" style="height:520px;" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block project-caption">
-                      <h5>Tweeter</h5>
-                      <p>A Twiter Clone</p>
-                    </div>
+                    <img class="d-block w-100" src="./docs/tweeter.jpg" alt="Third slide">
+                    <a target="_blank" href="https://github.com/paulabarreto/tweeter">
+                      <div class="carousel-caption d-none d-md-block project-caption">
+                        <h5>Tweeter</h5>
+                        <p>A Twiter Clone</p>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -202,6 +210,12 @@
                 </a>
               </div>
             </section>
+            <footer class="w-100 py-3 px-5 d-flex justify-content-center">
+              <div class="row w-100 d-flex justify-content-around">
+                <div class="w-100 spacer"></div>
+                <small>&copy; Paula Barreto</small>
+              </div>
+            </footer>
           </div>
         </div>
       </div>
