--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <br/>
                   I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. I am also conversant in Italian. <br/>
                   My successful experience both in a startup in Toronto and in a big international company in Brazil demonstrate my flexibility and capability to adapt quickly to different environments.<br/><br/>
-                  <em>I have the drive and the intelligence to make great things happen and I'm currently looking for a job opportunity as a junior software developer to demonstrate my qualifications and commitment.</em>
+                  <em>I have the drive and the intelligence to make great things happen and I'm currently looking for a job opportunity as a Junior Software Developer to demonstrate my qualifications and commitment.</em>
                </p>
             </section>
             <section id="experience" class="sect about-me row d-flex mt-5">
