--- a/index.html
+++ b/index.html
@@ -68,43 +68,77 @@
           <div class="container languages text-center mt-1 mb-5">
             <div class="row">
               <div class="col">
-                <span class="badge badge-light">JavaScript</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="ECMAScript 6"
+                  class="icons fab fa-js-square">
+                </i>
               </div>
               <div class="col">
-                <span class="badge badge-light">React.js</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="React.js"
+                  class="icons fab fa-react">
+                </i>
               </div>
               <div class="col">
-                <span class="badge badge-light">Node.js</span>
-              </div>
-              <div class="w-100"></div>
-              <div class="col">
-                <span class="badge badge-light">HTML5</span>
-              </div>
-              <div class="col">
-                <span class="badge badge-light">CSS3</span>
-              </div>
-              <div class="col">
-                <span class="badge badge-light">Sass</span>
-              </div>
-              <div class="w-100"></div>
-              <div class="col">
-                <span class="badge badge-light">Ruby</span>
-              </div>
-              <div class="col">
-                <span class="badge badge-light">Ruby on Rails</span>
-              </div>
-              <div class="col">
-                <span class="badge badge-light">C</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="Node.js"
+                  class="icons fab fa-node-js">
+                </i>
               </div>
               <div class="w-100"></div>
               <div class="col">
-                <span class="badge badge-light">PostgreSQL</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="HTML5"
+                  class="icons fab fa-html5">
+                </i>
               </div>
               <div class="col">
-                <span class="badge badge-light">Knex</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="CSS3"
+                  class="icons fab fa-css3-alt">
+                </i>
               </div>
               <div class="col">
-                <span class="badge badge-light">MongoDB</span>
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="Sass"
+                  class="icons fab fa-sass">
+                </i>              </div>
+              <div class="w-100"></div>
+              <div class="col">
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="Ruby"
+                  class="icons slow fas fa-gem">
+                </i>
+              </div>
+              <div class="col">
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="SQL"
+                  class="icons slow fas fa-database">
+                </i>
+              </div>
+              <div class="col">
+                <i
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="Git"
+                  class="icons fab fa-git">
+                </i>
               </div>
             </div>
           </div>
@@ -223,5 +257,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+
   </body>
 </html>
