Added Jungle project

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -211,21 +212,30 @@
                      <a target="_blank" href="https://github.com/paulabarreto/ParkWhere">
                       <div class="carousel-caption d-none d-md-block project-caption">
                         <h5>ParkWhere</h5>
-                        <p>A community based street parking app built with React and Node.js</p>
+                        <p>A community based street parking app built with React, Node.js and Google Maps API</p>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://github.com/paulabarreto/jungle-rails/blob/master/docs/home.jpg?raw=true" alt="Second slide">
+                     <a target="_blank" href="https://github.com/paulabarreto/jungle-rails">
+                      <div class="carousel-caption d-none d-md-block project-caption">
+                        <h5>Jungle</h5>
+                        <p>A mini e-commerce application built with Rails 4.2.</p>
                       </div>
                     </a>
                   </div>
                   <div class="carousel-item" >
-                    <img class="d-block w-100 mh-100" src="https://github.com/paulabarreto/chattyApp/blob/master/Docs/Screenshot-Bobs-window.jpg?raw=true" alt="Second slide">
+                    <img class="d-block w-100 mh-100" src="https://github.com/paulabarreto/chattyApp/blob/master/Docs/Screenshot-Bobs-window.jpg?raw=true" alt="Third slide">
                     <a target="_blank" href="https://github.com/paulabarreto/chattyApp">
                       <div class="carousel-caption d-none d-md-block project-caption">
-                        <h5>ChattyApp</h5>
+                        <h5>Chatty</h5>
                         <p>A real time web chat using React and WebSockets</p>
                       </div>
                     </a>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="./docs/tweeter.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="./docs/tweeter.jpg" alt="Forth slide">
                     <a target="_blank" href="https://github.com/paulabarreto/tweeter">
                       <div class="carousel-caption d-none d-md-block project-caption">
                         <h5>Tweeter</h5>
