--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
 
         <div class="col-lg-9 right-projects">
-          <div >
+          <div class="scrollable">
             <section id="about" class="sect about-me row d-flex mt-4">
               <h2>About Me</h2>
               <div class="w-100"></div>
