hover on language icons

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                   data-toggle="tooltip"
                   data-placement="top"
                   title="ECMAScript 6"
+                  data-trigger="hover"
                   class="icons fab fa-js-square">
                 </i>
               </div>
