about me update

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <section id="about" class="sect about-me row d-flex mt-4">
               <h2>About Me</h2>
               <div class="w-100"></div>
-              <strong>Full Stack Web Developer | Industrial Engineer | Tourism BS </strong>
+              <strong>Full Stack Web Developer | Industrial Engineer | Tourism Management BS </strong>
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving new goals.</em>
