--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a target="_blank" href="./docs/Paula-Barreto_Resume.pdf" download>
+            <a target="_blank" href="./docs/Paula_Barreto_Resume.pdf" download>
               <button
                 class="btn-sm btn-outline-info">
                 <i class="fas fa-download"></i>
@@ -159,7 +159,7 @@
                 <br/>
                   I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. I am also conversant in Italian. <br/>
                   My successful experience both in a startup in Toronto and in a big international company in Brazil demonstrate my flexibility and capability to adapt quickly to different environments.<br/><br/>
-                  <em>I have the drive and the intelligence to make great things happen and I'm currently looking for a job opportunity as a Junior Software Developer to demonstrate my qualifications and commitment.</em>
+                  <em>I have the drive and the intelligence to make great things happen.</em>
                </p>
             </section>
             <section id="experience" class="sect about-me row d-flex mt-5">
