Adds new work experience

--- a/index.html
+++ b/index.html
@@ -167,33 +167,37 @@
               <div class="w-100 h-0"></div>
               <div class="card-group experience-card">
                 <div class="card experience-card">
+                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify.png" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">iRestify</h5>
+                    <p class="card-text"><em>Full Stack Web Develper. </em>
+                      <p>
+                        Currently working building web applications using Node.js, React.js, Redux and Next.js.
+                      </p>
+                      <p>My responsibility also include improvements on performance and UI/UX of existing systems.</p>
+                  </div>
+                </div>
+                <div class="card experience-card">
                   <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/LHL-banner.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Lighthouse Labs</h5>
-                    <p class="card-text"><em>Full Stack Web Development Diploma. </em><br/><br/>
-                                          This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps
-                                          from scratch using different languages and frameworks. See below some examples.</p>
+                    <p class="card-text"><em>Full Stack Web Development Diploma. </em>
+                      <p>
+                        This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps from scratch using different languages and frameworks.
+                      </p>
+                      <p>See below some examples.</p>
                   </div>
                 </div>
                 <div class="card experience-card">
                   <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">StickerYou</h5>
-                    <p class="card-text"><em>Industrial Engineering Intern </em><br/><br/>
-                                          Valuable experience in a startup environment applying methods and concepts learned in Engineering school. <br/>
-                                          I improved systems and increased efficiency, leveraging my problem solving and communication skills.
-
-                                        </p>
+                    <p class="card-text"><em>Industrial Engineering Intern </em>
+                    <p>Valuable experience in a startup environment applying methods and concepts learned in Engineering school.</p>
+                    <p>I improved systems and increased efficiency, leveraging my problem solving and communication skills.</p>                   
                   </div>
                 </div>
-                <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/bndes-banner.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">BNDES (Rio de Janeiro, Brazil)</h5>
-                    <p class="card-text"> <em> Administrative Technician</em><br/><br/>
-                      Government job - hired by a public examination where I achieved one of the highest scores among 45000 contestants.</p>
-                  </div>
-                </div>
+                
               </div>
             </section>
             <section id="projects" class="sect row d-flex justify-content-center my-5 projects">
@@ -256,7 +260,7 @@
               </div>
             </section>
           </div>
-          <footer class="w-100 py-3 px-5 d-flex justify-content-center">
+          <footer class="w-100 py-3 d-flex justify-content-center">
             <div class="row w-100 d-flex justify-content-around">
               <div class="w-100 spacer"></div>
               <small>&copy; Paula Barreto</small>
