--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
         </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a target="_blank" href="./docs/Paula_Barreto_Resume.pdf" download>
-              <button
-                class="btn-sm btn-outline-info">
-                <i class="fas fa-download"></i>
-                Resume
-              </button>
-            </a>
-          </li>
-        </ul>
       </div>
+      <ul class="nav justify-content-end">
+        <li class="nav-item" style="margin-right: 5px">
+          <a target="_blank" href="./docs/Paula_Barreto_Resume.pdf" download>
+            <button
+              class="btn-sm btn-outline-info">
+              <i class="fas fa-download"></i>
+              Resume
+            </button>
+          </a>
+        </li>
+      </ul>
     </nav>
 
     <div class="container-fluid">
