adds href to phone number

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h5 class="mt-4 text-center" style="color:white;">Contact</h5>
           <div class="contact">
             <ul class="list-group">
-              <li class="list-group-item list-group-item-dark hvr-icon-grow"><i class="hvr-icon icons fas fa-phone-square"></i> +1 (647) 979-0404</li>
+              <li class="list-group-item list-group-item-dark hvr-icon-grow"><i class="hvr-icon icons fas fa-phone-square"><a href="tel:+16479790404"></i> +1 (647) 979-0404</li></a>
               <li class="list-group-item list-group-item-dark hvr-icon-grow"><i class="hvr-icon icons fas fa-envelope-square"></i> <a href="mailto:paulavilaca@gmail.com">paulavilaca@gmail.com</a></li>
               <li class="list-group-item list-group-item-dark hvr-icon-grow"><i class="hvr-icon icons fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/paula-barreto-057a35b4/" target="_blank">Paula Barreto</a></li>
               <li class="list-group-item list-group-item-dark hvr-icon-grow"><i class="hvr-icon icons fab fa-github-square"></i> <a href="https://github.com/paulabarreto" target="_blank">paulabarreto</a></li>
