updated experience Td bank

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <i
                   data-toggle="tooltip"
                   data-placement="top"
-                  title="Ruby"
-                  class="icons slow fas fa-gem">
+                  title="Angular"
+                  class="icons fab fa-angular">
                 </i>
               </div>
               <div class="col">
@@ -150,7 +150,7 @@
             <section id="about" class="sect about-me row d-flex mt-4">
               <h2>About Me</h2>
               <div class="w-100"></div>
-              <strong>Full Stack Web Developer | Industrial Engineer | Tourism Management BS </strong>
+              <strong>Full Stack Web Developer | Industrial Engineer </strong>
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving new goals.</em>
@@ -167,29 +167,32 @@
               <div class="w-100 h-0"></div>
               <div class="card-group experience-card">
                 <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify.png" alt="Card image cap">
+                    <img class="card-img-top card-cap img-fluid" style="height:110px; background-color: white;" src="./docs/td-logo.gif" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">TD Bank</h5>
+                      <p class="card-text"><em>Software Engineer. </em>
+                        <p>
+                          Currently working on some of the bank's most modern applications using Angular and Node.js.
+                        </p>
+                      </div>
+                </div>
+                <div class="card experience-card">
+                  <a href="https://www.irestify.com" target="_blank">
+                    <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify.png" alt="Card image cap">
+                  </a>
                   <div class="card-body">
                     <h5 class="card-title">iRestify</h5>
                     <p class="card-text"><em>Full Stack Web Develper. </em>
                       <p>
-                        Currently working building web applications using Node.js, React.js, Redux and Next.js.
+                        Built web applications using Node.js, React.js, Redux and Next.js.
                       </p>
-                      <p>My responsibility also include improvements on performance and UI/UX of existing systems.</p>
+                      <p>My responsibility also included improvements on performance and UI/UX of existing systems.</p>
                   </div>
                 </div>
                 <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/LHL-banner.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Lighthouse Labs</h5>
-                    <p class="card-text"><em>Full Stack Web Development Diploma. </em>
-                      <p>
-                        This coding bootcamp simulates the industry environment where I had the opportunity to have hands-on experience building web apps from scratch using different languages and frameworks.
-                      </p>
-                      <p>See below some examples.</p>
-                  </div>
-                </div>
-                <div class="card experience-card">
-                  <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
+                  <a href="https://www.stickeryou.com" target="_blank">
+                    <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/stickeryou-banner.jpg" alt="Card image cap">
+                  </a>
                   <div class="card-body">
                     <h5 class="card-title">StickerYou</h5>
                     <p class="card-text"><em>Industrial Engineering Intern </em>
