--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Paula Barreto</title>
-    <link rel="icon" href="./docs/logo.png">
+    <link rel="icon" href="./docs/laptop-code-solid.svg">
     <link rel="stylesheet" href="main.css">
     <!-- Font awesome -->
     <link rel="stylesheet"
