updated company logo

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="card experience-card">
                   <a href="https://www.irestify.com" target="_blank">
-                    <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify.png" alt="Card image cap">
+                    <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify_Logo.svg" alt="Card image cap">
                   </a>
                   <div class="card-body">
                     <h5 class="card-title">iRestify</h5>
