--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                       </div>
                 </div>
                 <div class="card experience-card">
-                  <a href="https://www.irestify.com" target="_blank">
+                  <a href="https://www.irestify.com" target="_blank" style="background-color: white;">
                     <img class="card-img-top card-cap img-fluid" style="height:110px;" src="./docs/iRestify_Logo.svg" alt="Card image cap">
                   </a>
                   <div class="card-body">
