--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="#"><img src="./docs/logo_transparent.png" width="35" height="35" alt="">   Paula Barreto</a>
+      <a class="navbar-brand" href="#"><i style="color: #17a2b8" class="fas fa-laptop-code"></i>  Paula Barreto</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
@@ -263,10 +263,23 @@
               </div>
             </section>
           </div>
-          <footer class="w-100 py-3 d-flex justify-content-center">
+          <footer class="w-100 py-3 justify-content-center">
             <div class="row w-100 d-flex justify-content-around">
               <div class="w-100 spacer"></div>
-              <small>&copy; Paula Barreto</small>
+              <div>
+                <p>
+                  <small>&copy; Paula Barreto</small>
+                </p>
+              </div>
+
+            </div>
+            <div class="row w-100 d-flex justify-content-around">
+              <div class="w-100 spacer"></div>
+              <div>
+                <p>
+                  <small> Thanks <a href="https://fontawesome.com/">font awesome</a> for the logo!</small>
+                </p>
+              </div>
             </div>
           </footer>
         </div>
