--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="./docs/parkwhere.jpg" alt="First slide">
-                     <a target="_blank" href="https://github.com/paulabarreto/ParkWhere">
+                    <img class="d-block w-100" src="./docs/support_brazilian.png" alt="First slide">
+                     <a target="_blank" href="https://www.supportbrazilian.ca">
                       <div class="carousel-caption d-none d-md-block project-caption">
-                        <h5>ParkWhere</h5>
-                        <p>A community based street parking app built with React, Node.js and Google Maps API</p>
+                        <h5>Support Brazilian</h5>
+                        <p>A dynamic list of Brazilian businesses built with React, NodeJS</p>
                       </div>
                     </a>
                   </div>
